generated/checker-for-evaluation/generated/test-Null-Pointer-Dereference-2e29b9971ac54dec88baa58856a230ec2f2a2dff/build_logs/1/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:59:12: error: ‘const class clang::ento::CallEvent’ has no member named ‘getCalleeName’; did you mean ‘getCaller’?
   59 |   if (Call.getCalleeName() != "kzalloc")
      |            ^~~~~~~~~~~~~
      |            getCaller
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/FoldingSet.h: In instantiation of ‘static void llvm::DefaultFoldingSetTrait<T>::Profile(const T&, llvm::FoldingSetNodeID&) [with T = llvm::StringRef]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:843:32:   required from ‘static void llvm::ImutProfileInfo<T>::Profile(llvm::FoldingSetNodeID&, llvm::ImutProfileInfo<T>::value_type_ref) [with T = llvm::StringRef; llvm::ImutProfileInfo<T>::value_type_ref = const llvm::StringRef&]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableMap.h:57:34:   required from ‘static void llvm::ImutKeyValueInfo<T, S>::Profile(llvm::FoldingSetNodeID&, llvm::ImutKeyValueInfo<T, S>::value_type_ref) [with T = const clang::ento::MemRegion*; S = llvm::StringRef; llvm::ImutKeyValueInfo<T, S>::value_type_ref = const std::pair<const clang::ento::MemRegion*, llvm::StringRef>&]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:292:22:   required from ‘static uint32_t llvm::ImutAVLTree<ImutInfo>::computeDigest(llvm::ImutAVLTree<ImutInfo>*, llvm::ImutAVLTree<ImutInfo>*, llvm::ImutAVLTree<ImutInfo>::value_type_ref) [with ImutInfo = llvm::ImutKeyValueInfo<const clang::ento::MemRegion*, llvm::StringRef>; uint32_t = unsigned int; llvm::ImutAVLTree<ImutInfo>::value_type_ref = const std::pair<const clang::ento::MemRegion*, llvm::StringRef>&]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:307:31:   required from ‘uint32_t llvm::ImutAVLTree<ImutInfo>::computeDigest() [with ImutInfo = llvm::ImutKeyValueInfo<const clang::ento::MemRegion*, llvm::StringRef>; uint32_t = unsigned int]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableSet.h:609:42:   required from ‘llvm::ImutAVLFactory<ImutInfo>::TreeTy* llvm::ImutAVLFactory<ImutInfo>::getCanonicalTree(llvm::ImutAVLFactory<ImutInfo>::TreeTy*) [with ImutInfo = llvm::ImutKeyValueInfo<const clang::ento::MemRegion*, llvm::StringRef>; llvm::ImutAVLFactory<ImutInfo>::TreeTy = llvm::ImutAVLTree<llvm::ImutKeyValueInfo<const clang::ento::MemRegion*, llvm::StringRef> >]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/ImmutableMap.h:101:60:   required from ‘llvm::ImmutableMap<KeyT, ValT, ValInfo> llvm::ImmutableMap<KeyT, ValT, ValInfo>::Factory::add(llvm::ImmutableMap<KeyT, ValT, ValInfo>, llvm::ImmutableMap<KeyT, ValT, ValInfo>::key_type_ref, llvm::ImmutableMap<KeyT, ValT, ValInfo>::data_type_ref) [with KeyT = const clang::ento::MemRegion*; ValT = llvm::StringRef; ValInfo = llvm::ImutKeyValueInfo<const clang::ento::MemRegion*, llvm::StringRef>; llvm::ImmutableMap<KeyT, ValT, ValInfo>::key_type_ref = const clang::ento::MemRegion* const&; llvm::ImmutableMap<KeyT, ValT, ValInfo>::data_type_ref = const llvm::StringRef&]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:171:19:   required from ‘static clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::data_type clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::Set(clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::data_type, clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::key_type, clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::value_type, clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::context_type) [with Key = const clang::ento::MemRegion*; Data = llvm::StringRef; Info = llvm::ImutKeyValueInfo<const clang::ento::MemRegion*, llvm::StringRef>; clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::data_type = llvm::ImmutableMap<const clang::ento::MemRegion*, llvm::StringRef>; clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::key_type = const clang::ento::MemRegion*; clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::value_type = llvm::StringRef; clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<Key, Data, Info> >::context_type = llvm::ImmutableMap<const clang::ento::MemRegion*, llvm::StringRef>::Factory&]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:652:65:   required from ‘clang::ento::ProgramStateRef clang::ento::ProgramStateManager::set(clang::ento::ProgramStateRef, typename clang::ento::ProgramStateTrait<T>::key_type, typename clang::ento::ProgramStateTrait<T>::value_type, typename clang::ento::ProgramStateTrait<T>::context_type) [with T = {anonymous}::AllocMap; clang::ento::ProgramStateRef = llvm::IntrusiveRefCntPtr<const clang::ento::ProgramState>; typename clang::ento::ProgramStateTrait<T>::key_type = const clang::ento::MemRegion*; typename clang::ento::ProgramStateTrait<T>::value_type = llvm::StringRef; typename clang::ento::ProgramStateTrait<T>::context_type = llvm::ImmutableMap<const clang::ento::MemRegion*, llvm::StringRef>::Factory&]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:876:34:   required from ‘clang::ento::ProgramStateRef clang::ento::ProgramState::set(typename clang::ento::ProgramStateTrait<T>::key_type, typename clang::ento::ProgramStateTrait<T>::value_type) const [with T = {anonymous}::AllocMap; clang::ento::ProgramStateRef = llvm::IntrusiveRefCntPtr<const clang::ento::ProgramState>; typename clang::ento::ProgramStateTrait<T>::key_type = const clang::ento::MemRegion*; typename clang::ento::ProgramStateTrait<T>::value_type = llvm::StringRef]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:86:31:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/FoldingSet.h:234:7: error: ‘const class llvm::StringRef’ has no member named ‘Profile’
  234 |     X.Profile(ID);
      |     ~~^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
